Fix overflow

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -20,7 +20,7 @@
   border-radius: 40px;
   padding: 3rem 4rem;
   position: relative;
-  overflow: hidden;
+  overflow: scroll;
 
   &__title {
     margin: 0;
